--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.9",
     "react": "^17.0.2",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
