--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dnd": "^15.1.1",
     "react-dnd-html5-backend": "^15.1.2",
+    "react-dnd-touch-backend": "^15.1.1",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-redux": "^7.2.6",
